[gd_scene load_steps=41 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Minigames/Running.gd" type="Script" id=2]
[ext_resource path="res://Assets/textures/feet_L.png" type="Texture" id=3]
[ext_resource path="res://Assets/textures/feet_R.png" type="Texture" id=4]
[ext_resource path="res://Assets/textures/feet_L_pressed.png" type="Texture" id=5]
[ext_resource path="res://Assets/textures/feet_R_pressed.png" type="Texture" id=6]
[ext_resource path="res://Assets/audio/breath2.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/audio/breath1.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/textures/ninjarun/png/Idle__005.png" type="Texture" id=9]
[ext_resource path="res://Assets/textures/ninjarun/png/Idle__007.png" type="Texture" id=10]
[ext_resource path="res://Assets/textures/ninjarun/png/Run__001.png" type="Texture" id=11]
[ext_resource path="res://Assets/textures/ninjarun/png/Dead__001.png" type="Texture" id=12]
[ext_resource path="res://Assets/textures/ninjarun/png/Dead__002.png" type="Texture" id=13]
[ext_resource path="res://Assets/textures/ninjarun/png/Dead__000.png" type="Texture" id=14]
[ext_resource path="res://Assets/textures/ninjarun/png/Dead__003.png" type="Texture" id=15]
[ext_resource path="res://Assets/textures/ninjarun/png/Run__000.png" type="Texture" id=16]
[ext_resource path="res://Assets/textures/ninjarun/png/Idle__009.png" type="Texture" id=17]
[ext_resource path="res://Assets/textures/ninjarun/png/Idle__008.png" type="Texture" id=18]
[ext_resource path="res://Assets/textures/ninjarun/png/Idle__000.png" type="Texture" id=19]
[ext_resource path="res://Assets/textures/ninjarun/png/Run__004.png" type="Texture" id=20]
[ext_resource path="res://Assets/textures/ninjarun/png/Run__006.png" type="Texture" id=21]
[ext_resource path="res://Assets/textures/ninjarun/png/Run__009.png" type="Texture" id=22]
[ext_resource path="res://Assets/textures/ninjarun/png/Dead__004.png" type="Texture" id=23]
[ext_resource path="res://Assets/textures/ninjarun/png/Dead__006.png" type="Texture" id=24]
[ext_resource path="res://Assets/textures/ninjarun/png/Idle__004.png" type="Texture" id=25]
[ext_resource path="res://Assets/textures/ninjarun/png/Dead__007.png" type="Texture" id=26]
[ext_resource path="res://Assets/textures/ninjarun/png/Dead__008.png" type="Texture" id=27]
[ext_resource path="res://Assets/textures/ninjarun/png/Dead__009.png" type="Texture" id=28]
[ext_resource path="res://Assets/textures/ninjarun/png/Dead__005.png" type="Texture" id=29]
[ext_resource path="res://Assets/textures/ninjarun/png/Run__005.png" type="Texture" id=30]
[ext_resource path="res://Assets/textures/ninjarun/png/Idle__002.png" type="Texture" id=31]
[ext_resource path="res://Assets/textures/ninjarun/png/Idle__003.png" type="Texture" id=32]
[ext_resource path="res://Assets/textures/ninjarun/png/Run__003.png" type="Texture" id=33]
[ext_resource path="res://Assets/textures/ninjarun/png/Run__002.png" type="Texture" id=34]
[ext_resource path="res://Assets/textures/ninjarun/png/Idle__001.png" type="Texture" id=35]
[ext_resource path="res://Assets/textures/ninjarun/png/Idle__006.png" type="Texture" id=36]
[ext_resource path="res://Assets/textures/ninjarun/png/Run__007.png" type="Texture" id=37]
[ext_resource path="res://Assets/textures/ninjarun/png/Run__008.png" type="Texture" id=38]
[ext_resource path="res://Assets/textures/explosion_overlay.png" type="Texture" id=39]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 19 ), ExtResource( 35 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 25 ), ExtResource( 9 ), ExtResource( 36 ), ExtResource( 10 ), ExtResource( 18 ), ExtResource( 17 ) ],
"loop": true,
"name": "idle",
"speed": 12.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 11 ), ExtResource( 34 ), ExtResource( 33 ), ExtResource( 20 ), ExtResource( 30 ), ExtResource( 21 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 22 ) ],
"loop": true,
"name": "running",
"speed": 15.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 23 ), ExtResource( 29 ), ExtResource( 24 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ) ],
"loop": false,
"name": "falling",
"speed": 25.0
} ]

[node name="Running" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Background"]
margin_right = 576.0
margin_bottom = 1024.0
color = Color( 0.952941, 0.952941, 0.952941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 289, 335 )
scale = Vector2( 2.28125, 2.28125 )
texture = ExtResource( 1 )

[node name="Buttons" type="Node2D" parent="."]

[node name="Left button" type="TextureButton" parent="Buttons"]
margin_left = 74.0
margin_top = 600.0
margin_right = 1044.0
margin_bottom = 3075.0
rect_scale = Vector2( 0.15, 0.15 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftBreathSound" type="AudioStreamPlayer2D" parent="Buttons/Left button"]
stream = ExtResource( 8 )

[node name="Right button" type="TextureButton" parent="Buttons"]
margin_left = 345.0
margin_top = 600.0
margin_right = 1396.0
margin_bottom = 3098.0
rect_scale = Vector2( 0.15, 0.15 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightBreathSound" type="AudioStreamPlayer2D" parent="Buttons/Right button"]
stream = ExtResource( 7 )

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
margin_left = -4.23779
margin_top = 94.1403
margin_right = 582.762
margin_bottom = 132.14
max_value = 30.0
step = 1.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Ninja" type="AnimatedSprite" parent="."]
position = Vector2( 283.031, 337.663 )
scale = Vector2( 0.815468, 0.815468 )
frames = SubResource( 1 )
animation = "idle"
frame = 7
playing = true

[node name="Hurt Overlay" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 0 )
texture = ExtResource( 39 )
offset = Vector2( 288, 512 )

[node name="Opacity_Animation" type="Tween" parent="Hurt Overlay"]
[connection signal="pressed" from="Buttons/Left button" to="." method="_on_Left_button_pressed"]
[connection signal="pressed" from="Buttons/Right button" to="." method="_on_Right_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
